<resources>
    <string name="app_name">Matajer</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="sign_up">Sign up</string>
    <string name="phone_number">Phone Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="home">Home</string>
    <string name="my_favourite">My Favourite</string>
    <string name="history">History</string>
    <string name="contact_us">Contact us</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="homee">Home</string>
    <string name="forget_password">Forget Password</string>
    <string name="send_your_name_to_restore_your_n_account_password">Send your name to restore your \n account password</string>
    <string name="send">Send</string>
    <string name="buy_now">Buy Now</string>
    <string name="pets_animals">Pets Animals</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buy">Buy</string>
</resources>