<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Forget_password">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/head_background"
        android:id="@+id/layout_above"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/cairo_regular"
            android:text="@string/forget_password"
            android:textColor="@color/white_color"
            android:textSize="45dp"
            android:textStyle="bold"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_above"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/send_your_name_to_restore_your_n_account_password"
        android:textSize="20dp"
        android:textColor="@color/start_color"
        android:layout_marginTop="40dp"
        android:textStyle="italic"
        android:id="@+id/txt"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/e_mail"
        android:padding="10dp"
        android:id="@+id/email_retrive"
        />
    <Button
        android:layout_width="130dp"
        android:layout_height="55dp"
        app:layout_constraintTop_toBottomOf="@id/email_retrive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/button_background"
        android:text="@string/send"
        android:textColor="@color/white_color"
        android:textAllCaps="false"
        android:textSize="25dp"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="200dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>