<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.SignUp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/head_background"
        android:id="@+id/layout_above"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/cairo_regular"
            android:text="@string/sign_up"
            android:textColor="@color/white_color"
            android:textSize="55dp"
            android:textStyle="bold"

            />
    </RelativeLayout>

    <EditText
        android:id="@+id/signup_frist_name"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/edittext_background"
        android:fontFamily="@font/cairo_regular"
        android:hint="@string/first_name"
        android:inputType="text"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_above" />

    <EditText
        android:id="@+id/signup_last_name"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/edittext_background"
        android:fontFamily="@font/cairo_regular"
        android:hint="@string/last_name"
        android:inputType="text"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_above" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toBottomOf="@id/signup_frist_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:hint="@string/e_mail"
        android:padding="15dp"
        android:inputType="text"
        android:id="@+id/signup_email"
        android:fontFamily="@font/cairo_regular"
        android:background="@drawable/edittext_background"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toBottomOf="@id/signup_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:padding="15dp"
        android:inputType="number"
        android:id="@+id/signup_password"
        android:fontFamily="@font/cairo_regular"
        android:background="@drawable/edittext_background"
        />
    <EditText
    android:layout_width="match_parent"
    android:layout_height="56dp"
    app:layout_constraintTop_toBottomOf="@id/signup_password"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="20dp"
    android:hint="@string/phone_number"
    android:padding="15dp"
    android:inputType="number"
    android:id="@+id/signup_phone"
    android:fontFamily="@font/cairo_regular"
    android:background="@drawable/edittext_background"
    />

    <Button
        android:id="@+id/signup_signup"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/cairo_regular"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white_color"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_phone"
        app:layout_constraintVertical_bias="0.456" />

    <Button
        android:id="@+id/signup_login"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginStart="36dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/cairo_regular"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white_color"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.919"
        app:layout_constraintStart_toStartOf="@id/signup_signup"
        app:layout_constraintTop_toBottomOf="@id/signup_phone"
        app:layout_constraintVertical_bias="0.456" />


</androidx.constraintlayout.widget.ConstraintLayout>