<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/head_background"
        android:id="@+id/layout_above"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/cairo_regular"
            android:text="@string/login"
            android:textColor="@color/white_color"
            android:textSize="55dp"
            android:textStyle="bold"

            />
    </RelativeLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toBottomOf="@id/layout_above"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:hint="@string/e_mail"
        android:padding="15dp"
        android:inputType="text"
        android:id="@+id/login_email"
        android:fontFamily="@font/cairo_regular"
        android:background="@drawable/edittext_background"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toBottomOf="@id/login_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="25dp"
        android:hint="@string/password"
        android:padding="15dp"
        android:inputType="number"
        android:id="@+id/login_password"
        android:fontFamily="@font/cairo_regular"
        android:background="@drawable/edittext_background"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/cairo_regular"
        android:text="@string/forget_your_password"
        android:textColor="@color/start_color"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password"
        android:id="@+id/login_forget"/>

    <Button
        android:id="@+id/login_signup"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/cairo_regular"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white_color"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_forget"
        app:layout_constraintVertical_bias="0.89" />

    <Button
        android:id="@+id/login_login"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginStart="36dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/cairo_regular"
        android:text="Login"
        android:textAllCaps="false"
        android:textColor="@color/white_color"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="@id/login_signup"
        app:layout_constraintTop_toBottomOf="@id/login_forget"
        app:layout_constraintVertical_bias="0.89" />
</androidx.constraintlayout.widget.ConstraintLayout>