<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:layout_gravity="left"
    tools:openDrawer="left"
    android:orientation="vertical"
    android:id="@+id/navgation_drawer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/img_layout"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/gray_color"
                android:layout_marginTop="130dp"
                android:src="@drawable/male"
                android:layout_marginLeft="30dp"
                android:id="@+id/user_img"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:layout_toRightOf="@id/user_img"
                android:layout_marginTop="160dp"
                android:layout_marginLeft="30dp"
                android:textSize="30dp"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nav_layout"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_below="@id/user_img"
                >

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/home_logo"
                    android:id="@+id/home_logo"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/home_logo"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/home"
                    android:textSize="35dp"
                    android:fontFamily="@font/cairo_regular"
                    android:textColor="@color/start_color"
                    android:textStyle="bold"
                    android:id="@+id/home_txt"
                    />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/favourite_logo"
                    android:id="@+id/favo_logo"
                    android:layout_below="@id/home_logo"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/favo_logo"
                    android:layout_below="@id/home_txt"
                    android:layout_marginTop="18dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/my_favourite"
                    android:textSize="35dp"
                    android:fontFamily="@font/cairo_regular"
                    android:textColor="@color/start_color"
                    android:textStyle="bold"
                    android:id="@+id/favo_txt"
                    />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/history_logo"
                    android:id="@+id/history_logo"
                    android:layout_below="@id/favo_logo"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/history_logo"
                    android:layout_below="@id/favo_txt"
                    android:layout_marginTop="22dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/history"
                    android:textSize="35dp"
                    android:fontFamily="@font/cairo_regular"
                    android:textColor="@color/start_color"
                    android:textStyle="bold"
                    android:id="@+id/history_txt"
                    />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/settings"
                    android:id="@+id/settings_logo"
                    android:layout_below="@id/history_logo"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/settings_logo"
                    android:layout_below="@id/history_txt"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/settings"
                    android:textSize="35dp"
                    android:fontFamily="@font/cairo_regular"
                    android:textColor="@color/start_color"
                    android:textStyle="bold"
                    android:id="@+id/settings_txt"
                    />
                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/input"
                    android:id="@+id/logout"
                    android:layout_below="@id/settings_logo"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/settings_logo"
                    android:layout_below="@id/settings_txt"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/logout"
                    android:textSize="35dp"
                    android:fontFamily="@font/cairo_regular"
                    android:textColor="@color/start_color"
                    android:textStyle="bold"
                    android:id="@+id/logout_txt"
                    />
            </RelativeLayout>
        </RelativeLayout>
        </LinearLayout>
</RelativeLayout>
